--- a/html/app-access-permission.html
+++ b/html/app-access-permission.html
@@ -12,7 +12,7 @@
  -->
 <!-- beautify ignore:start -->
 
-<html lang="fa" class="light-style layout-navbar-fixed layout-menu-fixed " dir="rtl" data-theme="theme-default" data-assets-path="../../assets/" data-template="vertical-menu-template">
+<html lang="ln" class="light-style layout-navbar-fixed layout-menu-fixed " dir="rtl" data-theme="theme-default" data-assets-path="../../assets/" data-template="vertical-menu-template">
 
   <head>
     <meta charset="utf-8" />
